# Coding-Samples

./: .gitignore  README.md  compile_and_run.sh
DjangoService/: db.sqlite3  manage.py
DjangoService/DjangoService/: asgi.py  settings.py  urls.py  wsgi.py
DjangoService/computationalBiology/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
DjangoService/computationalBiology/static/computationalBiology/: style.css
DjangoService/computationalBiology/templates/computationalBiology/: algorithm.html  index.html
computational_biology/: CMakeLists.txt  computational_biology.cpp  computational_biology.h
computational_geometry/: README.md  compile_and_run_geometry.sh  compile_and_run_geometry_cuda.bat  create_video.cpp  create_video.h  edge_list.cpp  edge_list.h  geometry_suite.cpp  gl_callbacks.cpp  gl_callbacks.h  includes.h  point_3d.cpp  point_3d.h  point_cloud.cpp  point_cloud.h  primitives.cpp  primitives.h  rational.cpp  rational.h  voronoi.cpp  voronoi.h
computational_geometry/ComputationalGeometry/: ALL_BUILD.vcxproj  CMakeLists.txt  ComputationalGeometry.sln  ComputationalGeometry.vcxproj  ComputationalGeometry.vcxproj.filters
computational_geometry/ComputationalGeometry/glut/: README.txt
image_output/: Note.txt
video_output/: Note.txt
